# raizquadrada

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/emersonparizoto/raizequadrado/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: mynativelib.cpp  mynativelib.h
app/src/main/java/com/example/emersonparizoto/raizequadrado/: MainActivity.java
app/src/main/jni/: mynativelibJNI.c
app/src/main/libdvbpsi-1.3.0/: config.h
app/src/main/libdvbpsi-1.3.0/src/: Makefile  Makefile.in  demux.lo  dvbpsi.lo  libdvbpsi.la  psi.lo
app/src/main/libdvbpsi-1.3.0/src/.deps/: demux.Plo  descriptor.Plo  dvbpsi.Plo  psi.Plo
app/src/main/libdvbpsi-1.3.0/src/.libs/: libdvbpsi.lai  libdvbpsi.so.10.0.0
app/src/main/libdvbpsi-1.3.0/src/descriptors/: dr_02.lo  dr_03.lo  dr_04.lo  dr_05.lo  dr_06.lo  dr_07.lo  dr_08.lo  dr_09.lo  dr_0a.lo  dr_0b.lo  dr_0c.lo  dr_0d.lo  dr_0e.lo  dr_0f.lo  dr_10.lo  dr_11.lo  dr_12.lo  dr_13.lo  dr_14.lo  dr_1b.lo  dr_1c.lo  dr_40.lo  dr_41.lo  dr_42.lo  dr_43.lo  dr_44.lo  dr_45.lo  dr_47.lo  dr_48.lo  dr_49.lo  dr_4a.lo  dr_4b.lo  dr_4c.lo  dr_4d.lo  dr_4e.lo  dr_4f.lo  dr_50.lo  dr_52.lo  dr_53.lo  dr_54.lo  (+17 more)
app/src/main/libdvbpsi-1.3.0/src/descriptors/.deps/: dr_02.Plo  dr_03.Plo  dr_04.Plo  dr_05.Plo  dr_06.Plo  dr_07.Plo  dr_08.Plo  dr_09.Plo  dr_0a.Plo  dr_0b.Plo  dr_0c.Plo  dr_0d.Plo  dr_0e.Plo  dr_0f.Plo  dr_10.Plo  dr_11.Plo  dr_12.Plo  dr_13.Plo  dr_14.Plo  dr_1b.Plo  dr_1c.Plo  dr_40.Plo  dr_41.Plo  dr_42.Plo  dr_43.Plo  dr_44.Plo  dr_45.Plo  dr_47.Plo  dr_48.Plo  dr_49.Plo  dr_4a.Plo  dr_4b.Plo  dr_4c.Plo  dr_4d.Plo  dr_4e.Plo  dr_4f.Plo  dr_50.Plo  dr_52.Plo  dr_53.Plo  dr_54.Plo  (+17 more)
app/src/main/libdvbpsi-1.3.0/src/tables/: atsc_eit.lo  atsc_ett.lo  atsc_mgt.lo  atsc_stt.lo  atsc_vct.lo  bat.lo  cat.lo  eit.lo  nit.lo  pat.lo  pmt.lo  rst.lo  sdt.lo  sis.lo  tot.lo
app/src/main/libdvbpsi-1.3.0/src/tables/.deps/: atsc_eit.Plo  atsc_ett.Plo  atsc_mgt.Plo  atsc_stt.Plo  atsc_vct.Plo  bat.Plo  cat.Plo  eit.Plo  nit.Plo  pat.Plo  pmt.Plo  rst.Plo  sdt.Plo  sis.Plo  tot.Plo
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
(+1 files in other folders)
